# LightEdit

./: .gitignore  README.md  README_en.md  index.html  package-lock.json  package.json
docs/: release-checklist.md
qa/: uiStyleContracts.test.ts
qa/visual-baseline/: README.md  print-scenarios.mjs  scenarios.json
src/: App.test.tsx  App.tsx  desktop.ts  editorModel.test.ts  editorModel.ts  formatters.test.ts  formatters.ts  qualityBaseline.test.tsx  stateTransitions.test.ts  stateTransitions.ts  storage.test.ts  storage.ts  styles.css  types.ts  uiTimings.ts  versionLabel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  shortcuts.rs  window_native.rs
src/components/: ContextMenu.tsx  EditorPane.test.tsx  EditorPane.tsx  EditorToolbar.tsx  NotesMenu.test.tsx  NotesMenu.tsx  ProjectTab.test.tsx  ProjectTab.tsx  Toast.tsx  TopBar.tsx  VersionRail.test.tsx  VersionRail.tsx
src/test/: setup.ts
